src/objects/KPI_Value__c.object
<CustomObject>
    <fields>
        <fullName>Area_Concerned__c</fullName>
        <formula>TEXT (FDS_KPI_Reporting__r.Area_Concerned__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Concerned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <description>Field to link the object to a case to be able to filter from dashboards</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>KPI Values</relationshipLabel>
        <relationshipName>KPI_Values</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <formula>DATE (VALUE(Year__c),CASE( Month__c,&quot;January&quot;,1,&quot;February&quot;,2,&quot;March&quot;,3,&quot;April&quot;,4,&quot;May&quot;,5,&quot;June&quot;,6,&quot;July&quot;,7,&quot;August&quot;,8,&quot;September&quot;,9,&quot;October&quot;,10,&quot;November&quot;,11,&quot;December&quot;,12,1),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <description>The agreed date when the KPI must be entered by the responsible person</description>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDS_KPI_Reporting__c</fullName>
        <label>FDS KPI Reporting</label>
        <referenceTo>FDS_KPI_Reporting__c</referenceTo>
        <relationshipLabel>KPI Values</relationshipLabel>
        <relationshipName>KPI_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KPI_Value__c</fullName>
        <description>The actual value that will appear on the ISS Report</description>
        <label>Value Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>The month of the KPI</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check box if the KPI is not available this month</inlineHelpText>
        <label>Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>CPS</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BSP</fullName>
                </value>
                <value>
                    <fullName>CASS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>GDC Madrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_sent_to_responsible__c</fullName>
        <description>Date when the reminder sent to the responsible person</description>
        <label>Reminder sent to responsible</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The responsible person to update the KPI</description>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KPI_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>CPS</description>
        <label>Scope</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Percentage__c</fullName>
        <description>The % of the value if available</description>
        <label>Value Percentage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <formula>TEXT (FDS_KPI_Reporting__r.Value_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KPI Value</label>
    <listViews>
        <fullName>Airline_Suspension</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>suspen,GDS deactivat,alerts from sh</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Airline Suspension</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cesar</fullName>
        <columns>Area_Concerned__c</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Value_Type__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Reminder_sent_to_responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Responsible__c</field>
            <operation>contains</operation>
            <value>CESAR</value>
        </filters>
        <label>Cesar</label>
        <language>en_US</language>
        <sharedTo>
            <role>DistributionAirlineManagementHO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Phone_Calls</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>calls</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>weekly</value>
        </filters>
        <label>Customer Service - Phone Calls</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ET_distribution_N_Asia_only</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ET Distribution</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>ET distribution (N.Asia only)</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I_C_Collection_KPI</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FDS_KPI_Reporting__c</field>
            <operation>contains</operation>
            <value>Receivable,collected</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>I&amp;C - Collection KPI</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
            <group>I_C_GDC</group>
            <group>Invoicing_Management_Regions</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I_C_Invoicing_KPI</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FDS_KPI_Reporting__c</field>
            <operation>contains</operation>
            <value>invoicing</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>I&amp;C - Invoicing KPI</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
            <group>I_C_GDC</group>
            <group>Invoicing_Management_Regions</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_KPI_exceeded_the_deadline</fullName>
        <columns>NAME</columns>
        <columns>Area_Concerned__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Responsible__c</columns>
        <columns>Value_Type__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Reminder_sent_to_responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deadline__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Value_Percentage__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>KPI_Value__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_Value__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>*Pending KPI exceeded the deadline</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quality_BCP</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>wingmate,BCP Tests successfully completed</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Quality - BCP</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quality_Dc_Rqts_and_Mgt</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>% of Interdependencies matched</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Quality - Dc Rqts and Mgt</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quality_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Responsible__c</field>
            <operation>equals</operation>
            <value>Manuel garcia del salto</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Quality - Exceptions</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quality_On_going_Compliance</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SOP Live Test,Compliance to records,Compliance to KC,Compliance to EXE</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Quality - On going Compliance</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quality_Operational_Improvement</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Number of initiatives log,% of Initiatives (OIs) managed within overall deadline</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Quality - Operational Improvement</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quality_Risk_Audit_Compliance</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>completion</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Quality - Risk &amp; Audit Compliance</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RET_Management</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>Value_Percentage__c</columns>
        <columns>Not_Available__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>RET files</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>weekly</value>
        </filters>
        <label>RET Management</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_S_BSP_Faster_Cash</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Region__c</columns>
        <columns>KPI_Value__c</columns>
        <columns>Deadline__c</columns>
        <columns>Responsible__c</columns>
        <columns>Not_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>faster cash</value>
        </filters>
        <filters>
            <field>Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>R&amp;S - BSP Faster Cash</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>KPI Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>KPI_No_entry_after_the_deadline_in_3d</fullName>
        <active>true</active>
        <errorConditionFormula>TODAY() &gt;   Deadline__c +3 &amp;&amp; $User.ProfileId &lt;&gt; &quot;00ew0000001R6uT&quot; &amp;&amp; $User.ProfileId &lt;&gt; &quot;00e20000000h0gF&quot; &amp;&amp; $User.Id &lt;&gt; &quot;0051r000007mhLq&quot;</errorConditionFormula>
        <errorMessage>You can not update this record 3 days after the deadline. Please contact the Workflow &amp; Metrics Team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>KPI_Value_type_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Value_Type__c  = &apos;Number&apos;, NOT(ISNULL( Value_Percentage__c )))</errorConditionFormula>
        <errorDisplayField>Value_Percentage__c</errorDisplayField>
        <errorMessage>This KPI is a Number, please update the &quot;Value Number&quot; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>KPI_Value_type_Percentage</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Value_Type__c  = &apos;Percentage&apos;, NOT(ISNULL(KPI_Value__c)))</errorConditionFormula>
        <errorDisplayField>KPI_Value__c</errorDisplayField>
        <errorMessage>This KPI is a percentage, please update the &quot;Value Percentage&quot; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Perce_No_entry_after_the_deadline_in_3d</fullName>
        <active>true</active>
        <errorConditionFormula>TODAY() &gt;   Deadline__c +3 &amp;&amp; $User.ProfileId &lt;&gt; &quot;00ew0000001R6uT&quot; &amp;&amp; $User.ProfileId &lt;&gt; &quot;00e20000000h0gF&quot; &amp;&amp;  $User.Id &lt;&gt; &quot;0051r000007mhLq&quot;</errorConditionFormula>
        <errorDisplayField>Value_Percentage__c</errorDisplayField>
        <errorMessage>You can not update this record 3 days after the deadline. Please contact the Workflow &amp; Metrics Team</errorMessage>
    </validationRules>
</CustomObject>